<resources>
    <string name="app_name">Blood Purification</string>
    <string name="start1_hint">Pre-treatment bilirubin concentration</string>
    <string name="start2_hint">Post-treatment bilirubin concentration</string>
    <string name="start3_hint">Bilirubin concentration after 24h</string>
    <string name="start4_hint">Average clearance</string>
    <string name="start5_hint">Time of treatment</string>
    <string name="start_button_text">Calculate</string>

    <string name="input1_hint">Pre-treatment bilirubin concentration</string>
    <string name="input2_hint">Total volume</string>
    <string name="input3_hint">Intercompartmental clearance</string>
    <string name="input4_hint">Bilirubin generation rate</string>
    <string name="input5_hint">Average clearance</string>
    <string name="input6_hint">Time of treatment</string>
    <string name="input_button_text">Graph</string>

    <string name="start_menu_string">Home</string>
    <string name="input_menu_string">Input</string>
    <string name="graph_menu_string">Graph</string>
    <string name="input7_hint">Post-treatment bilirubin concentration</string>
    <string name="input8_hint">Concentration after 24h</string>
    <string name="inputRequiredError">This field is required</string>
    <string name="parametersText">Parameters</string>
    <string name="pointsText">Points</string>
    <string name="concentration">concentration</string>
    <string name="time">time: (minutes)</string>
    <string name="add_button_text">Add point</string>

    <string name="cPreString">Bilirubin concentration at the beginning of the therapy [mg/ml]</string>
    <string name="totalVolumeString">Volume of both compartments [ml]</string>
    <string name="KpcString">Intercompartmental clearance [ml/min]</string>
    <string name="genRateString">Conjugated bilirubin generation rate [mg/min]</string>
    <string name="avgClearanceString">Conjugated bilirubin clearance (constant) [ml/min]</string>
    <string name="happyTime">Time in which will be concentration measured [min]</string>

    <string name="invalidValueError">Value has to be greater than zero</string>
</resources>