<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".Input">

        <EditText
            android:id="@+id/editText1"
            style="@style/View1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/input1_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText2"
            style="@style/View1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input2_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText3"
            style="@style/View1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input3_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText4"
            style="@style/View1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input4_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText5"
            style="@style/View1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input5_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText6"
            style="@style/View1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input6_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/inputButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/button_margin"
            android:padding="@dimen/button_padding"
            android:text="@string/input_button_text" />

    </LinearLayout>
</layout>